--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                  
                 <div id="para">
-                    <p>I am passionate about learning new technologies and their practical implementation in web development. Prior work experiences include trading bond options on the Chicago Board of Trade financial floor and 6 owning and operating 2 locations of a national franchise.</p>
+                    <p>I am passionate about learning new technologies and their practical implementation in web development. Prior work experiences include trading bond options on the Chicago Board of Trade financial floor and 6 years owning and operating 2 locations of a national franchise.</p>
                 </div>
             </article>
         </section>
